--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ main{
                 border-radius: .5rem;
             }
 
+
+            .button-selected{
+                background: var(--topaz);
+            }
+
             input {
                 width: 100%;
                 border: none;
