--- a/style.css
+++ b/style.css
@@ -165,6 +165,11 @@ main{
     }
 }
 
+    input::-webkit-inner-spin-button,
+    input::-webkit-outer-spin-button {
+        display: none;
+    }
+
 @media(min-width: 920px) {
     main{
         display: flex;
@@ -179,24 +184,23 @@ main{
         width: 100%;
     }
 
-    input::-webkit-inner-spin-button,
-    input::-webkit-outer-spin-button {
-        display: none;
-    }
-   
     .info {
         .tip {
             div {
                 grid-template-columns: repeat(3, 1fr);
 
                 button:hover {
-                    background: var(--topaz);
-                    cursor: pointer;
+                    background: var(--water-leaf);
                     transition: .3s;
+                    cursor: pointer;
                 }
             }
         }
     }
+                
+            
+        
+    
 
     .results {
         display: flex;
